# utrafman_sim

./: .gitignore  .gitmodules  README.md  cmake  package.xml
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: god.pc  siam_god.pc  siam_main.pc
docs/: API.md  MATLAB_api.md  README.md  README.old.md  ROS_api.md  _coverpage.md  _sidebar.md  architecture.md  control_software.md  homepage.md  index.html  install.md  intro.md  introduction.md  sidebar.md  sim_environment.md  tutorials.md  utm_services.md
gazebo-ros/src/siam_god/: package.xml
install/: local_setup.sh  setup.sh
launch/: rosrun.launch
log/: latest_build
matlab/: cp.mlapp  dronemodel.mlx  simulator.m
matlab/classes/: FlightPlansPlanner.m
matlab/old_classes/: OperationalPlan.m
matlab/old_files/: drone_control_tut3_R22a.slx.original
matlab/simulations/: sim25.fig
matlab/visitas/: visitas_i3a_22_j1.slx
models/sphere/: sphere_template.txt
plugins/: CMakeLists.txt  airspace-controller-2.cc  airspace-controller.cc  cversion.c
src/god/: CMakeLists.txt
src/god/src/: airspace-controller-2.cc  god.cc
src/matlab/: ROSconfig.m  UTMtoMatrix.m  UTMtoMatrix.mlx  compilar_mensajes_ros.m  ros_custom_message_compiler_MATLAB.m  simulator.m  telemetry_viewer.m
src/matlab/classes/: Drone.m  FlightPlan.m  FlightPlanProperties.m  Gazebo.m  GazeboConnector.m  Operator.m  Registry.m  S_Monitoring.m  S_Registry.m  SimulationProcesser.m  SimulationProcesser_testing.mlx  UAVProperties.m  UTMAirspace.m  WorldModel.m  (+1 more)
src/siam_main/: CMakeLists.txt
worlds/: test.world  test_ruby.erb
(+589 files in other folders)
